# A3-Compiladores

CompiladorA3/compilador/: .gitignore  CMakeLists.txt  for-parser-ajuste.md  for-parser-changes-report.md  instalacao.md  readme.md
CompiladorA3/compilador/src/: ast.h  evaluator.cpp  evaluator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  teste.cpp
CompiladorA3/compilador/src/tests/: 01_basic.cml  02_expressions.cml  03_strings.cml  04_errors.cml  05_assignment.cml  06_declaration.cml  07_do_while.cml  08_for_increment.cml  09_for.cml  10_if_else.cml  12_printf.cml  13_return.cml  14_tmp_control.cml  15_while.cml  declaration.cml  do_while.cml  for.cml  for_increment.cml  if_else.cml  meu_teste.cml  tmp_control.cml  while.cml
